# argon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
argon/: __init__.py  args.py  cli.py  context.py  core.py  exceptions.py  help.py  parser.py  shell.py  specs.py
argon.egg-info/: PKG-INFO  SOURCES.txt
docs/: api-reference.md  async.md  authoring.md  configuration.md  getting-started.md  index.md  migration-v1.md  output-live.md  release-checklist.md  shell.md  theming.md
docs/dev/: contract.md  theming.md
examples/: __init__.py  demo.config.json  demo.py
src/argon/: __init__.py  app.py  config.py  introspect.py  models.py  params.py  run.py
src/argon/console/: __init__.py  completion.py  context.py  dispatch.py  errors.py  help.py  highlighting.py  output.py  parser.py  partial.py  registry.py  runtime.py
src/argon/shell/: __init__.py  run.py  session.py
src/argon/shell/ptk/: __init__.py  completions.py  history.py  keybindings.py  lexer.py  repl.py  style.py
src/argon/ui/: __init__.py  formatter.py  rich_console.py  template.py  theme.py  tokens.py
tests/: conftest.py  test_app_api.py  test_async_contract.py  test_basic.py  test_completion_core.py  test_config.py  test_console_execute_argv.py  test_console_execute_line.py  test_context_output.py  test_docs.py  test_example_demo.py  test_formatting.py  test_help.py  test_highlighting_core.py  test_introspect.py  test_params.py  test_theme.py
tests/shell/: test_keybindings.py  test_ptk_completions.py  test_ptk_import_guards.py  test_ptk_lexer.py  test_shell_run.py
