[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argon"
version = "0.1.0"
description = "Modern, fully Pythonic hierarchical CLI framework (hierarchical groups, option inference, aliases, hooks, global options, REPL, completion)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Adam Williams" }
]
requires-python = ">=3.10"
keywords = ["cli", "command-line", "parser", "framework", "commands", "tooling"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

# Pure stdlib; no install dependencies.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
  "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/Adams-Galaxy/argon"
Repository = "https://github.com/Adams-Galaxy/argon"
Issues = "https://github.com/Adams-Galaxy/argon/issues"

[tool.setuptools.package-data]
"argon" = ["py.typed"]

[tool.setuptools.packages.find]
include = ["argon*"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = false
